@@ -1,3 +1,8 @@
+Mon Jul 15 13:36:02 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* hash.c (rb_hash_each_pair): performance improvement by using
+	  rb_block_arity().
+
 Mon Jul 15 13:15:37 2013  Masaki Matsushita  <glass.saga@gmail.com>
 
 	* proc.c (rb_block_arity): create internal API rb_block_arity().
